manifests/cluster-addons/media/beets/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: beets-debug
  namespace: media
  labels:
    app.kubernetes.io/name: beets-debug
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 1
  containers:
    - name: beets
      image: ghcr.io/bakseter/homelab/beets:2.4.0@sha256:76888069fa00486eb04de1f3f2f3c94ab847efa1d9c57d7d3f36b0345cfca276
      command: ['sleep', 'infinity']
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: [ALL]
        readOnlyRootFilesystem: true
      volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /config/config.yaml
          name: beets-config
          subPath: config.yaml
          readOnly: true
        - mountPath: /config/plugins
          name: beets-plugins
          readOnly: true
        - mountPath: /media
          name: media
        - mountPath: /tmp
          name: tmp
  securityContext:
    fsGroup: 65534
    runAsGroup: 65534
    runAsNonRoot: true
    runAsUser: 65534
    seccompProfile:
      type: RuntimeDefault
  volumes:
    - name: config
      persistentVolumeClaim:
        claimName: beets-config
    - name: beets-config
      configMap:
        name: beets-config
    - name: beets-plugins
      configMap:
        name: beets-plugins
    - name: media
      persistentVolumeClaim:
        claimName: shared-media
    - emptyDir: {}
      name: tmp
